@startuml

title __FRAGMENTS's Class Diagram__\n

  package com.nxp.nfc_demo.fragments {
    class ConfigFragment {
        + onCreate()
        + onCreateView()
        + onClick()
    }
  }
  

  package com.nxp.nfc_demo.fragments {
    class LedFragment {
        - ntagLogo : ImageView
        - anim : Animation
        {static} ~ nxpPressedButtons : ImageView
        {static} - lcdCheck : CheckBox
        {static} - tempCheck : CheckBox
        {static} - Scroll_check : CheckBox
        {static} - textCallback : TextView
        {static} - texttransferDir : TextView
        {static} - textSelectColor : TextView
        {static} - option : String
        {static} - lastOption : String
        {static} - voltage : double
        {static} - temperatureC : double
        {static} - temperatureF : double
        - isSwitchedOn : boolean
        + onCreate()
        + onCreateView()
        - setButtonCallbacks()
        - initVariables()
        + onClick()
        - refreschOption()
        {static} + setButton()
        {static} + getOption()
        {static} + getVoltage()
        {static} + getTemperatureC()
        {static} + getTemperatureF()
        {static} + isScrollEnabled()
        {static} + isLCDEnabled()
        {static} + isTempEnabled()
        {static} + setTransferDir()
        {static} + setAnswer()
        {static} + setVoltage()
        {static} + setTemperatureC()
        {static} + setTemperatureF()
    }
  }
  

  package com.nxp.nfc_demo.fragments {
    class NdefFragment {
        {static} - ndefWriteOptions : RadioGroup
        {static} - ndefReadType : LinearLayout
        {static} - ndefText : TextView
        {static} - ndefEditText : EditText
        - linearBt : LinearLayout
        {static} - ndefEditMac : EditText
        {static} - ndefEditName : EditText
        {static} - ndefEditClass : EditText
        - linearSp : LinearLayout
        {static} - ndefEditTitle : EditText
        {static} - ndefEditLink : EditText
        {static} - ndefTypeText : TextView
        {static} - ndefCallback : TextView
        {static} - ndefDataRateCallback : TextView
        - ndefPerformance : TextView
        - readNdefButton : Button
        - writeNdefButton : Button
        - writeDefaultNdefButton : Button
        {static} - ndefReadLoop : CheckBox
        {static} - addAar : CheckBox
        {static} - writeChosen : boolean
        + onCreate()
        + onCreateView()
        + onClick()
        + onCheckedChanged()
        {static} + resetNdefDemo()
        {static} + getText()
        {static} + getBtMac()
        {static} + getBtName()
        {static} + getBtClass()
        {static} + getSpTitle()
        {static} + getSpLink()
        {static} + isAarRecordSelected()
        {static} + isNdefReadLoopSelected()
        {static} + setAnswer()
        {static} + setDatarate()
        {static} + setNdefType()
        {static} + setNdefMessage()
        {static} + getNdefType()
        {static} + isWriteChosen()
    }
  }
  

  package com.nxp.nfc_demo.fragments {
    class SpeedTestFragment {
        {static} - rfReadOptions : RadioGroup
        {static} - rfMemOptions : RadioGroup
        {static} - rfTextCallback : TextView
        {static} - rfDatarateCallback : TextView
        {static} - rfChosen : boolean
        {static} - rfMemChosen : boolean
        {static} - rfEditCharMulti : EditText
        {static} - rfTextCharMulti : TextView
        {static} - rfButtonSpeedtest : Button
        - charMultiListener : TextWatcher
        + onCreate()
        + onCreateView()
        + onCheckedChanged()
        - eepromCalculateOverhead()
        - createNdefMessage()
        - StartEEPROMSpeedTest()
        - StartSRAMSpeedTest()
        {static} + getrf_ndef_value_charmulti()
        {static} + isSRamEnabled()
        {static} + setAnswer()
        {static} + getChosen()
        {static} + getReadOptions()
        {static} + setReadOptions()
        {static} + setDatarateCallback()
        {static} + getDatarateCallback()
        + onClick()
    }
  }
  

  ConfigFragment -up-|> OnClickListener
  ConfigFragment -up-|> Fragment
  SavedState -up-|> Parcelable
  LedFragment -up-|> OnClickListener
  LedFragment -up-|> Fragment
  SavedState -up-|> Parcelable
  NdefFragment -up-|> OnClickListener
  NdefFragment -up-|> OnCheckedChangeListener
  NdefFragment -up-|> Fragment
  SavedState -up-|> Parcelable
  SpeedTestFragment -up-|> OnCheckedChangeListener
  SpeedTestFragment -up-|> OnClickListener
  SpeedTestFragment -up-|> Fragment
  SavedState -up-|> Parcelable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
